# BigData_Project_Machine_Learning-_for_Big_Data

./: .gitignore  HOW_TO_USE.md  HOW_TO_USE.txt  Project_Presentation.pptx  Project_Report.docx  README.md  Spark_LSH_Wikipedia_plan.md  app.py  pyproject.toml  requirements.txt
out_smoke/: part-00000-f3dfe24c-b685-445b-92e3-28552e5ddb89-c000.snappy.parquet
scripts/: run_pipeline.py  spark_submit.sh
src/wiki_near_dup/: __init__.py  config.py  evaluate.py  features.py  ingest.py  jaccard_utils.py  lsh_pipeline.py
tests/: test_evaluate_pure.py  test_spark_smoke.py
