[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-near-dup"
version = "0.1.0"
description = "Near-duplicate detection on Wikipedia XML using PySpark MinHash LSH"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyspark>=3.4.0,<3.6.0",
  "numpy>=1.24.0",
  "setuptools>=69.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
